
DOWNLOADERS:
1. download(): use "PRESSURE" as output for pressure channel.

UTILS:
1. Change np.float to np.float32.
2. save2asdf(): fixed sta_in when it is a list.
=======
2. save2asdf: Fixed a bug when saving multiple traces with a list of station inventory.

DOWNLOADERS:
1. download(): changed pressure channel rmresp output to "PRESSURE", instead of hardcoding it to "VEL".

=================================================================
Updates in v0.7.7
TYPES:
1. CorrData.merge(): added option to ignore channel types. This is needed when stations update
  their channels types, e.g., EH? to BH?. This new option would allow station pairs with different
  channel types to merge. Default is False.

NOISE:
1. merge_pairs(): added option of ignore_channel_type.

SETUP:
1. Change numpy requirement to be <1.26.0.
=================================================================
Updates in v0.7.6
UTILS:
1. Added smooth functions for 1d, 2d, and 3d grids.
2. Added matrix_in_polygon to extract 2d or 3d values with,in a polygon.
3. Added boundary_points() to get the boundary of a series of points.

=================================================================
Updates in v0.7.5
NOISE:
1. correlate(): discarded lines removing peak at zero lag (demean of the spectrum).

MONITORING:
1. get_dvv: improved plot saving. Fixed a bug where stack_method was not specified for substacking.
2. ts_dvv: trimed data to only compare the original data window, excluding the padded zeros.
3. xc_dvv: newly added method using moving window cross-correlations. needs improvements and more tests.

DISPERSION:
1. get_dispersion_image: use adaptive window size for different periods, increasing with periods.
  This is options. Options to specify minimum number of trace and minimum number of wavelength.
  * added option to specify energy type, "power_sum" or "envelope".
  * added plotting options.
  * fixed bugs when only processing one side.